<resources>
    <string name="app_name">嘟嘟</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="register_account">注册账号</string>
    <string name="register">注册</string>
    <string name="repeat_password">确认密码</string>
    <string name="email">邮箱地址</string>
    <string name="square">广场</string>
    <string name="my">我</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="createdAt">创建时间</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="user_info">个人信息</string>
    <string name="sex">性别</string>
    <string name="mobile">手机</string>
    <string name="photo_library">相册</string>
    <string name="take_photo">拍照</string>
    <string name="pick_image">选择图片</string>
    <string name="modify_nickname">更改名字</string>
    <string name="save">保存</string>
    <string name="create_remind">创建提醒</string>
</resources>
