<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:contentDescription="camera"
        android:src="@drawable/img_camera" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@drawable/bg_corner"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtUsername"
        android:layout_alignStart="@+id/txtUsername"
        android:layout_below="@+id/txtUsername"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_corner"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_alignStart="@+id/txtPassword"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_orange_corner_block"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btnGoRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="#00000000"
        android:text="@string/register_account"
        android:textColor="#CCCCCC" />
</RelativeLayout>