<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackgroundColor"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/btnAvatar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_row_top_bottom"
            android:clickable="true"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/avatar"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/imageAvatar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/avatar"
                android:scaleType="centerInside"
                android:src="@drawable/img_avatar_placeholder" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnNickname"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_row_bottom"
            android:clickable="true"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/nickname"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="佚名"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnSex"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_row_bottom"
            android:clickable="true"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sex"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="未选择"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnEmail"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_row_bottom"
            android:clickable="true"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/email"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="未填写"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnMobile"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/bg_row_bottom"
            android:clickable="true"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/mobile"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="未填写"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>